--- a/views/ex1.html
+++ b/views/ex1.html
@@ -1,5 +1,15 @@
-<button ng-click='ex1.changeMe()'>change</button>
-<div ng-repeat='note in ex1.notes'>
-	Without Bind Once:<div class="label" ng-bind="note.label"></div>
-	With Bind Once: <div class="label" ng-bind='::note.label'></div>
+<style>
+	.done {
+		background-color:green;
+	}
+	.pending{
+		background-color:red;
+	}
+</style>
+<div ng-repeat='note in ex1.notes'
+		 ng-class='ex1.getNoteClass(note.done)'>
+	<span class="label" ng-bind="note.label"></span>
+	<span class="assignee"
+								ng-show'note.assignee'
+								ng-bind='note.assignee'></span>
 </div>
