added example 5 in project 7 for nested forms

--- a/views/home.html
+++ b/views/home.html
@@ -4,4 +4,6 @@
 	<a href="#!/ex1">example 1</a>
 	<a href="#!/ex2">example 2</a>
 	<a href="#!/ex3">example 3</a>
+	<a href="#!/ex4">example 4</a>
+	<a href="#!/ex5">example 5</a>
 </div>
