--- a/views/ex4.html
+++ b/views/ex4.html
@@ -1,1 +1,15 @@
 
+<div>
+  <input type="text"
+          ng-model="ctrl.withoutModelOptions"
+          ng-minlength="5"/>
+  you typed {{ctrl.withoutModelOptions}}
+</div>
+
+<div>
+  <input type="text"
+          ng-model="ctrl.withModelOptions"
+          ng-model-options="ctrl.modelOptions"
+          ng-minlength="5"/>
+  you typed {{ctrl.withModelOptions()}}
+</div>
