Added last example

--- a/views/ex2.html
+++ b/views/ex2.html
@@ -3,3 +3,5 @@
 	<span class="label" ng-bind="note"></span>
 	<span class="authorng" ng-bind='author'></span>
 </div>
+
+<a href="#!/home"> Back</a>
